--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
